--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,14 @@ dependencies:
   url_launcher: ^6.2.5
   http: ^1.2.0
   flutter_secure_storage: ^9.0.0
+  logging: ^1.2.0
 
   # Local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.2
   jwt_decoder: ^2.0.1
+  synchronized: ^3.1.0+1
 
   flutter_localizations:
     sdk: flutter
@@ -59,6 +61,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
   hive_generator: ^2.0.1
+  path_provider_platform_interface: ^2.0.6
+  plugin_platform_interface: ^2.1.6
+  mockito: ^5.4.4
+  test: ^1.24.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
