--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,15 @@ dependencies:
   jwt_decoder: ^2.0.1
   synchronized: ^3.1.0+1
 
+  # State management
+  flutter_riverpod: ^2.4.10
+  riverpod_annotation: ^2.3.4
+
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
 
   fast_rsa: ^3.0.0
-  get_it: ^8.0.3
   rxdart: ^0.28.0
   uuid: ^4.5.1
   equatable: ^2.0.7
@@ -66,6 +69,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
+  riverpod_generator: ^2.3.10
   hive_generator: ^2.0.1
   path_provider_platform_interface: ^2.0.6
   plugin_platform_interface: ^2.1.6
