--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,11 +58,9 @@ dependencies:
   rxdart: ^0.28.0
   uuid: ^4.5.1
   meta: ^1.16.0
-  rdf_core: ^0.7.6
-  rdf_mapper: 
-    path: ../rdf/rdf_mapper
-  rdf_vocabularies:
-    path: ../rdf/rdf_vocabularies
+  rdf_core: ^0.9.2
+  rdf_mapper: ^0.4.0
+  rdf_vocabularies: ^0.3.0
 
 dev_dependencies:
   flutter_test:
