--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.8.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -50,8 +50,8 @@ dependencies:
   synchronized: ^3.1.0+1
 
   flutter_localizations:
-    sdk: flutter
-  intl: ^0.19.0
+    sdk: flutter 
+  intl: '>0.19.0'
 
   fast_rsa: ^3.0.0
   get_it: ^8.0.3
@@ -59,8 +59,9 @@ dependencies:
   uuid: ^4.5.1
   meta: ^1.16.0
   rdf_core: ^0.9.2
-  rdf_mapper: ^0.7.0
+  rdf_mapper: ^0.8.0
   rdf_vocabularies: ^0.3.0
+  rdf_mapper_annotations: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,8 @@ dev_dependencies:
   plugin_platform_interface: ^2.1.6
   mockito: ^5.4.5
   test: ^1.24.9
+  rdf_mapper_generator: 
+    path: ../rdf/rdf_mapper_generator
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
