--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   solid_auth: ^0.1.22
   url_launcher: ^6.2.5
   http: ^1.2.0
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^10.0.0-beta.4
   logging: ^1.2.0
 
   # Local storage
@@ -68,7 +68,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.15
   hive_generator: ^2.0.1
   path_provider_platform_interface: ^2.0.6
