--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   rdf_mapper_annotations: ^0.10.0 
   oidc: ^0.12.1+2
   oidc_default_store: ^0.4.0+3
+  oidc_core: ^0.14.2+1
 
 dev_dependencies:
   flutter_test:
