--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -45,7 +45,7 @@ jobs:
       run: flutter pub get
     
     - name: Build web app
-      run: flutter build web --release
+      run: flutter build web --release --base-href /solid_task/
     
     - name: Setup Pages
       uses: actions/configure-pages@v4
