refactor: simplify authentication and profile parsing, fix OIDC stack overflow
- Switch to Git dependencies for OIDC packages to fix hook execution stack overflow
- Simplify DefaultSolidProfileParser by removing redundant predicates and fallback logic
- Streamline SolidAuthenticationOidc by removing custom hook implementation
- Clean up unused imports and dead code across auth services
- Improve DPoP token generation flow for better maintainability

This change reduces overall code complexity while fixing critical authentication issues
and maintaining the same functional behavior for end users.

Fixes: OIDC hook execution stack overflow
Reduces: Code complexity by ~100 lines across affected files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,16 @@ dependencies:
   rdf_vocabularies_schema: ^0.4.1
   rdf_vocabularies_core: ^0.4.1
   rdf_mapper_annotations: ^0.10.0 
-  oidc: ^0.12.1+2
-  oidc_default_store: ^0.4.0+3
-  oidc_core: ^0.14.2+1
+  oidc:
+    git:
+      url: https://github.com/kkalass/oidc.git
+      ref: fix/oidc-hook-execute-stack-overflow
+      path: packages/oidc
+  oidc_default_store:
+    git:
+      url: https://github.com/kkalass/oidc.git
+      ref: fix/oidc-hook-execute-stack-overflow
+      path: packages/oidc_default_store
 
 dev_dependencies:
   flutter_test:
@@ -127,3 +134,15 @@ flutter:
 
   assets:
     - assets/solid_providers.json
+
+dependency_overrides:
+  oidc_core:
+    git:
+      url: https://github.com/kkalass/oidc.git
+      ref: fix/oidc-hook-execute-stack-overflow
+      path: packages/oidc_core
+  oidc_platform_interface:
+    git:
+      url: https://github.com/kkalass/oidc.git
+      ref: fix/oidc-hook-execute-stack-overflow
+      path: packages/oidc_platform_interface
